--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>A* main screen</title>
 </head>
 <body>
-    <script type="module" src="js/stack.js"></script>
+    <script type="module" src="js/lsarray.js"></script>
     <script type="module" src="js/heap.js"></script>
     <script type="module" src="js/astar.js"></script>
     <script type="module" src="js/main.js"></script>
+    <script type="module" src="js/tests.js"></script>
 </body>
 </html>
