--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script type="module" src="js/lsarray.js"></script>
     <script type="module" src="js/heap.js"></script>
     <script type="module" src="js/astar.js"></script>
+    <script type="module" src="js/canvas_helper.js"></script>
     <script type="module" src="js/main.js"></script>
     <script type="module" src="js/tests.js"></script>
 </body>
