astar code working as web worker

--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
     <title>A* main screen</title>
 </head>
 <body>
-    <script type="module" src="js/lsarray.js"></script>
-    <script type="module" src="js/heap.js"></script>
-    <script type="module" src="js/astar.js"></script>
-    <script type="module" src="js/canvas_helper.js"></script>
-    <script type="module" src="js/main.js"></script>
-    <script type="module" src="js/tests.js"></script>
+    <script src="js/canvas_helper.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
