--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A* main screen</title>
+    <style>
+        canvas {
+            transform-origin: left top;
+            transform: scale(.2, .2);
+        }
+        html, body{
+            margin: 0px;
+            overflow: hidden;
+        }
+    </style>
 </head>
 <body>
     <script src="js/canvas_helper.js"></script>
     <script src="js/main.js"></script>
+   
 </body>
 </html>
