--- a/index.html
+++ b/index.html
@@ -7,15 +7,24 @@
     <style>
         canvas {
             transform-origin: left top;
-            transform: scale(.2, .2);
+            transform: scale(.5, .5);
         }
         html, body{
             margin: 0px;
-            overflow: hidden;
+                    }
+        #canvasContainer {
+            width: 800px;
+            height: 800px;
+        }
+        p{
+            margin-right: 0em;
+            margin-top:0em;
         }
     </style>
 </head>
 <body>
+    <div id="canvasContainer" width="600" height="600"></div>
+    <p>deneme</p>
     <script src="js/canvas_helper.js"></script>
     <script src="js/main.js"></script>
    
